--- a/financialproduct.html
+++ b/financialproduct.html
@@ -104,7 +104,7 @@
                     <li><a href="javascript:;"> <i class="fa fa-weixin" aria-hidden="true"></i> <span>官方微信</span> </a>
                         <div></div>
                     </li>
-                    <li><a href="http://weibo.com/jerry50124"> <i class="fa fa-weibo" aria-hidden="true"></i> <span>官方微博</span> </a>
+                    <li><a href="https://weibo.com/jerry50124"> <i class="fa fa-weibo" aria-hidden="true"></i> <span>官方微博</span> </a>
                         <div></div>
                     </li>
                 </ul>
