--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <li><a href="javascript:;"> <i class="fa fa-weixin" aria-hidden="true"></i> <span>官方微信</span> </a>
         <div></div>
     </li>
-    <li><a href="http://weibo.com/jerry50124"> <i class="fa fa-weibo" aria-hidden="true"></i> <span>官方微博</span> </a>
+    <li><a href="https://weibo.com/jerry50124"> <i class="fa fa-weibo" aria-hidden="true"></i> <span>官方微博</span> </a>
         <div></div>
     </li>
     </ul>
@@ -153,12 +153,12 @@
             <div class="carousel-inner" role="listbox">
 
                 <div class="item active">
-                    <img src="http://via.placeholder.com/1920x370" alt="...">
+                    <img src="https://via.placeholder.com/1920x370" alt="...">
                     <div class="carousel-caption">
                     </div>
                 </div>
                 <div class="item">
-                    <img src="http://via.placeholder.com/1920x370" alt="...">
+                    <img src="https://via.placeholder.com/1920x370" alt="...">
                     <div class="carousel-caption">
                     </div>
                 </div>
